@@ -10,7 +10,6 @@ from collections import OrderedDict
 import json
 import logging
 import os.path
-import subprocess
 import sys
 try:
     from urllib.error import (
@@ -32,6 +31,7 @@ except ImportError:
     from urlparse import urlparse
 
 from lpbuildd.target.operation import Operation
+from lpbuildd.target.vcs import VCSOperationMixin
 
 
 RETCODE_FAILURE_INSTALL = 200
@@ -41,7 +41,7 @@ RETCODE_FAILURE_BUILD = 201
 logger = logging.getLogger(__name__)
 
 
-class BuildSnap(Operation):
+class BuildSnap(VCSOperationMixin, Operation):
 
     description = "Build a snap."
 
@@ -56,15 +56,6 @@ class BuildSnap(Operation):
             help=(
                 "install snapcraft as a snap from CHANNEL rather than as a "
                 ".deb"))
-        build_from_group = parser.add_mutually_exclusive_group(required=True)
-        build_from_group.add_argument(
-            "--branch", metavar="BRANCH", help="build from this Bazaar branch")
-        build_from_group.add_argument(
-            "--git-repository", metavar="REPOSITORY",
-            help="build from this Git repository")
-        parser.add_argument(
-            "--git-path", metavar="REF-PATH",
-            help="build from this ref path in REPOSITORY")
         parser.add_argument("--proxy-url", help="builder proxy url")
         parser.add_argument(
             "--revocation-endpoint",
@@ -73,18 +64,12 @@ class BuildSnap(Operation):
 
     def __init__(self, args, parser):
         super(BuildSnap, self).__init__(args, parser)
-        if args.git_repository is None and args.git_path is not None:
-            parser.error("--git-path requires --git-repository")
         self.slavebin = os.path.dirname(sys.argv[0])
-        # Set to False for local testing if your target doesn't have an
-        # appropriate certificate for your codehosting system.
-        self.ssl_verify = True
 
-    def run_build_command(self, args, cwd="/build", env=None, **kwargs):
+    def run_build_command(self, args, env=None, **kwargs):
         """Run a build command in the target.
 
         :param args: the command and arguments to run.
-        :param cwd: run the command in this working directory in the target.
         :param env: dictionary of additional environment variables to set.
         :param kwargs: any other keyword arguments to pass to Backend.run.
         """
@@ -93,7 +78,7 @@ class BuildSnap(Operation):
         full_env["SHELL"] = "/bin/sh"
         if env:
             full_env.update(env)
-        return self.backend.run(args, cwd=cwd, env=full_env, **kwargs)
+        return self.backend.run(args, env=full_env, **kwargs)
 
     def save_status(self, status):
         """Save a dictionary of status information about this build.
@@ -115,10 +100,7 @@ class BuildSnap(Operation):
             for dep in "snapd", "fuse", "squashfuse", "udev":
                 if self.backend.is_package_available(dep):
                     deps.append(dep)
-        if self.args.branch is not None:
-            deps.append("bzr")
-        else:
-            deps.append("git")
+        deps.extend(self.vcs_deps)
         if self.args.proxy_url:
             deps.extend(["python3", "socat"])
         if not self.args.channel_snapcraft:
@@ -145,41 +127,20 @@ class BuildSnap(Operation):
             env["http_proxy"] = self.args.proxy_url
             env["https_proxy"] = self.args.proxy_url
             env["GIT_PROXY_COMMAND"] = "/usr/local/bin/snap-git-proxy"
-        if self.args.branch is not None:
-            self.run_build_command(['ls', '/build'])
-            cmd = ["bzr", "branch", self.args.branch, self.args.name]
-            if not self.ssl_verify:
-                cmd.insert(1, "-Ossl.cert_reqs=none")
-        else:
-            assert self.args.git_repository is not None
-            cmd = ["git", "clone"]
-            if self.args.git_path is not None:
-                cmd.extend(["-b", self.args.git_path])
-            cmd.extend([self.args.git_repository, self.args.name])
-            if not self.ssl_verify:
-                env["GIT_SSL_NO_VERIFY"] = "1"
-        self.run_build_command(cmd, env=env)
-        if self.args.git_repository is not None:
-            try:
-                self.run_build_command(
-                    ["git", "-C", self.args.name,
-                     "submodule", "update", "--init", "--recursive"],
-                    env=env)
-            except subprocess.CalledProcessError as e:
-                logger.error(
-                    "'git submodule update --init --recursive failed with "
-                    "exit code %s (build may fail later)" % e.returncode)
+        self.vcs_fetch(self.args.name, cwd="/build", env=env)
         status = {}
         if self.args.branch is not None:
             status["revision_id"] = self.run_build_command(
-                ["bzr", "revno", self.args.name],
+                ["bzr", "revno"],
+                cwd=os.path.join("/build", self.args.name),
                 get_output=True).rstrip("\n")
         else:
             rev = (
                 self.args.git_path
                 if self.args.git_path is not None else "HEAD")
             status["revision_id"] = self.run_build_command(
-                ["git", "-C", self.args.name, "rev-parse", rev],
+                ["git", "rev-parse", rev],
+                cwd=os.path.join("/build", self.args.name),
                 get_output=True).rstrip("\n")
         self.save_status(status)
 
