@@ -5,6 +5,8 @@ launchpad-buildd (159) UNRELEASED; urgency=medium
     won't start any of them, including snapd itself, if any of them is
     forbidden.  Mask snapd.refresh.timer so that it doesn't cause trouble.
   * Allow optionally installing snapcraft as a snap (LP: #1737994).
+  * Refactor VCS operations from lpbuildd.target.build_snap out to a module
+    that can be used by other targets.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Fri, 02 Feb 2018 16:14:46 +0000
 
